@@ -30,6 +30,7 @@ $ -> Language fix or change
  # [#30489] *Regression: Menu Type UTF8 Alias prevents display in Menu Items Manager in J3
  ^ [#30499] Duplicate "btn" class in login module button.  Thanks Thomas Hunziker
  # [#30041] Use of '/' not being handled well on Windows Servers.  Thanks Parth Lawate
+ # [#30054] Catchable fatal error: Object of class stdClass could not be converted to string in /plugins/system/debug/debug.php on line 303.  Thanks Ryan K.
 
 07-Apr-2013 Jean-Marie Simonet
  # [#30226] *TAGS: Getting rid of all aspects concerning lang associations
